# final_project_model_interface

./: Dockerfile  README.md  pyproject.toml
src/: data_preprocessor.py  inference.py  model_loader.py
