[tool.poetry]
name = "final-project-model-interface"
version = "0.1.0"
description = "Machine learning pipeline with model training and deployment"
authors = ["Elida Pena <penaelida44@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
pandas = ">=2.2,<3.0.0"
scikit-learn = ">=1.6.1,<2.0.0"
xgboost = ">=2.1.3,<3.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
